dist/spoolman/Deployment.spoolman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: spoolman
  name: spoolman
  namespace: spoolman
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: spoolman-app-spoolman-app-deployment-c828c0db
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: generators
        app.kubernetes.io/name: spoolman
        cdk8s.io/metadata.addr: spoolman-app-spoolman-app-deployment-c828c0db
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: SPOOLMAN_DB_TYPE
              value: postgres
            - name: SPOOLMAN_DB_HOST
              value: prod.postgres.svc.cluster.local
            - name: SPOOLMAN_DB_PORT
              value: "5432"
            - name: SPOOLMAN_DB_NAME
              value: spoolman
            - name: SPOOLMAN_DB_USERNAME
              value: spoolman
            - name: SPOOLMAN_DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: SPOOLMAN_DB_PASSWORD
                  name: spoolman-creds
            - name: SPOOLMAN_HOST
              value: 0.0.0.0
            - name: SPOOLMAN_PORT
              value: "8000"
            - name: SPOOLMAN_CORS_ORIGIN
              value: https://pandora.cmdcentral.xyz,https://trident.cmdcentral.xyz
            - name: SPOOLMAN_METRICS_ENABLED
              value: "true"
            - name: TZ
              value: America/Chicago
          image: ghcr.io/donkie/spoolman:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/health
              port: 8000
              scheme: HTTP
          name: spoolman
          ports:
            - containerPort: 8000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1/health
              port: 8000
              scheme: HTTP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
