dist/spoolman/Service.spoolman.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: generators
    app.kubernetes.io/name: spoolman
  name: spoolman
  namespace: spoolman
spec:
  externalIPs: []
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    cdk8s.io/metadata.addr: spoolman-app-spoolman-app-deployment-c828c0db
  type: ClusterIP
