dist/spoolman/Ingress.spoolman.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spoolman
  namespace: spoolman
spec:
  rules:
    - host: spoolman.cmdcentral.xyz
      http:
        paths:
          - backend:
              service:
                name: spoolman
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - spoolman.cmdcentral.xyz
